# policyengine-sg

./: .gitignore  CHANGELOG.md  GAPS.md  LICENSE  Makefile  README.md  changelog.yaml  changelog_entry.yaml  check_vectorization.py  pyproject.toml
.github/: changelog_template.yaml
.github/workflows/: pr.yaml
changelog.d/: implement-sg-tax-benefit-system.added.md  migrate-to-towncrier.changed.md
docs/agents/sources/cpf/: README.md  account_allocation.md  contribution_rates.md  cpf_system_overview.md  healthcare_housing_schemes.md  legislative_references.md  retirement_schemes.md  salary_ceiling.md
policyengine_sg/: __init__.py  entities.py  model_api.py  system.py
policyengine_sg/parameters/: __init__.py
policyengine_sg/parameters/gov/cpf/: contribution_rates.yaml
policyengine_sg/tests/: __init__.py  conftest.py  test_system.py
policyengine_sg/variables/: __init__.py
policyengine_sg/variables/gov/: __init__.py
policyengine_sg/variables/gov/cpf/: __init__.py  cpf_additional_wage.py  cpf_eligible_age.py  cpf_employee_contribution.py  cpf_employer_contribution.py  cpf_ordinary_wage.py  cpf_total_contribution.py
policyengine_sg/variables/gov/mom/: skills_development_levy.py
policyengine_sg/variables/input/demographics/: __init__.py  age.py  immigration_status.py  is_citizen.py  is_disabled.py  is_female.py  is_married.py  is_nsman.py  is_parent_of_nsman.py  is_pr.py  is_resident.py  is_wife_of_nsman.py  nsman_status.py
policyengine_sg/variables/input/education/: school_level.py
policyengine_sg/variables/input/family/: has_child_under_16.py  has_elderly_67_plus.py  has_fdw.py  is_grandparent_caregiver.py  is_working_mother.py  number_of_children.py  number_of_children_born_before_2024.py  number_of_children_in_childcare.py  number_of_children_in_infant_care.py  number_of_children_in_kindergarten.py  number_of_children_in_student_care.py  number_of_children_with_disability.py  number_of_dependant_parents.py  number_of_dependant_parents_not_living.py  number_of_disabled_parents.py  number_of_disabled_parents_not_living.py  number_of_disabled_siblings.py  spouse_is_disabled.py
policyengine_sg/variables/input/housing/: buyer_profile.py  gross_monthly_household_income.py  hdb_flat_type.py  is_first_time_homebuyer.py  is_owner_occupied.py  monthly_scc_charge.py  number_of_properties.py  property_annual_value.py  property_holding_years.py  property_purchase_price.py  (+1 more)
(+286 files in other folders)
